last changes before lecture

--- a/lectures/lecture1/lecture1.tex
+++ b/lectures/lecture1/lecture1.tex
@@ -30,7 +30,7 @@
 }
 \makeatother
 
-\title[Majeure Data Science -- Surrogate models and GPR]{\texorpdfstring{ \small Surrogate models and Gaussian Process regression -- lecture 1/8 \\ \vspace{3mm} \LARGE Surrogate models in engineering}{}}
+\title[Majeure Data Science -- Surrogate models and GPR]{\texorpdfstring{ \small Surrogate models and Gaussian Process regression -- lecture 1/5 \\ \vspace{3mm} \LARGE Surrogate models in engineering}{}}
 \author[Mines St-\'Etienne ]{Mines St-\'Etienne -- Majeure Data Science -- 2016/2017}
 \institute{\texorpdfstring{Nicolas Durrande (durrande@emse.fr)}{}}
 \date{\null}
@@ -89,8 +89,9 @@ The project will be on the optimization of paper helicopters:\\
 \vspace{0.5cm}
 \structure{Course material:}\\
 \begin{itemize}
+	\item Handout
 	\item Campus
-	\item github : https://github.com/NicolasDurrande/Gaussian-Processes-course
+	\item github: https://github.com/NicolasDurrande/EMSE_Gaussian_process_models
 \end{itemize}
 
 \vspace{0.5cm}
