--- a/lectures/lecture3/lecture3.tex
+++ b/lectures/lecture3/lecture3.tex
@@ -352,7 +352,7 @@ We have considered maximum likelihood estimation for the kernel's parameter... w
 \end{enumerate}
 We recall that the likelihood is
 \begin{equation*}
-L(t) = \frac{1}{\displaystyle (2 \pi)^{n/2} |k(X,X)|^{1/2}} \exp \left(-\frac12 (x-t \mathbf{1})^t k(X,X)^{-1} (x-t \mathbf{1})  \right)
+L(t) = \frac{1}{\displaystyle (2 \pi)^{n/2} |k(X,X)|^{1/2}} \exp \left(-\frac12 (F-t \mathbf{1})^t k(X,X)^{-1} (F-t \mathbf{1})  \right)
 \end{equation*}
 \end{exampleblock}
 \end{frame}
