minor changes in the lecture

--- a/lectures/lecture4/lecture4.tex
+++ b/lectures/lecture4/lecture4.tex
@@ -115,10 +115,9 @@ Intuition is often misleading in high-dimension:
 \column{5.5cm}
 \includegraphics[height=4.5cm]{figures/crashtest} 
 \column{5cm}
-Testing all combinations of min and max input values for the 50 parameters would require... \pause \\
-
-\textbf{3000 times the age of the universe}!\\
-($d=50$ $\rightarrow$ $2^d \approx 1.e15$)
+Testing all combinations of min and max input values for the 50 parameters would require... \pause
+$$\mathbf{d=50 \ \Rightarrow \ 2^d \approx 1.e15 \ days}$$
+\textbf{(3000 times the age of the universe)}\\
 \end{columns}
 \end{exampleblock}
 \end{frame}
@@ -130,7 +129,7 @@ Testing all combinations of min and max input values for the 50 parameters would
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{One at a time design}
-An intuitive way to check the influence of various variable is to make them change one at the time.
+An intuitive way to check the influence of various variables is to make them change one at the time.
 \begin{itemize}
 	\item All variables are fixed at a reference value (0 for example)
 	\item One variable is changed at a time to see if there is an influence
